--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item_contraint_layout">
 
     <ImageView
         android:id="@+id/folder_imageview"
@@ -16,6 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
+        android:id="@+id/title_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Category"
