--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -8,43 +8,13 @@
     tools:context=".activities.NotesListActivity">
 
 
-       <androidx.recyclerview.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </androidx.recyclerview.widget.RecyclerView>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-    <ImageView
-        android:id="@+id/Note_Image"
-        android:layout_width="70dp"
-        android:layout_height="70dp">
-
-    </ImageView>
-
-    <TextView
-        android:id="@+id/note_list_title_tv"
-        android:layout_width="140dp"
-        android:layout_height="20dp"
-        tools:text="Note_title"
-        >
-
-    </TextView>
-
-    <TextView
-        android:id="@+id/desc_note_list_tv"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        tools:text="Description of Note">
-
-
-    </TextView>
-
-
-</LinearLayout>
-
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
