--- a/app/src/main/res/layout/notes_list_item.xml
+++ b/app/src/main/res/layout/notes_list_item.xml
@@ -12,9 +12,9 @@
         android:layout_width="40dp"
         android:layout_height="53dp"
 
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@+id/notes_title_tv"
-        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintHorizontal_bias="0.152"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></ImageView>
 
@@ -22,9 +22,12 @@
         android:id="@+id/notes_title_tv"
         android:layout_width="181dp"
         android:layout_height="20dp"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="124dp"
         android:text="title"
-        app:layout_constraintEnd_toStartOf="@+id/notes_edit_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/notes_list_image"
         app:layout_constraintTop_toTopOf="parent"></TextView>
 
     <TextView
@@ -37,28 +40,7 @@
         app:layout_constraintStart_toStartOf="@+id/notes_title_tv"
         app:layout_constraintTop_toBottomOf="@+id/notes_title_tv"></TextView>
 
-    <Button
-        android:id="@+id/notes_edit_btn"
-        android:layout_width="70dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="2dp"
-        android:text="Edit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/notes_delete_btn"
-        app:layout_constraintTop_toTopOf="parent">
 
-    </Button>
-
-    <Button
-        android:id="@+id/notes_delete_btn"
-        android:layout_width="70dp"
-        android:layout_height="40dp"
-        android:text="Delete"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </Button>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
