--- a/app/src/main/res/layout/notes_list_item.xml
+++ b/app/src/main/res/layout/notes_list_item.xml
@@ -1,46 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="20dp">
 
     <ImageView
         android:id="@+id/notes_list_image"
-        android:layout_width="40dp"
-        android:layout_height="53dp"
-
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/notes_title_tv"
-        app:layout_constraintHorizontal_bias="0.152"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></ImageView>
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/notes_title_tv"
-        android:layout_width="181dp"
+        android:layout_width="0dp"
         android:layout_height="20dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="124dp"
+        android:layout_marginLeft="20dp"
         android:text="title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/notes_list_image"
-        app:layout_constraintTop_toTopOf="parent"></TextView>
+        app:layout_constraintLeft_toRightOf="@id/notes_list_image"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/notes_desc_tv"
-        android:layout_width="170dp"
+        android:layout_width="0dp"
         android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:text="title"
-        app:layout_constraintStart_toStartOf="@+id/notes_title_tv"
-        app:layout_constraintTop_toBottomOf="@+id/notes_title_tv"></TextView>
-
-
+        android:layout_marginLeft="20dp"
+        android:text=""
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toRightOf="@id/notes_list_image"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/notes_title_tv" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
