--- a/app/src/main/res/layout/notes_list_item.xml
+++ b/app/src/main/res/layout/notes_list_item.xml
@@ -4,21 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:id="@+id/constraint_layout">
 
     <ImageView
         android:id="@+id/notes_list_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/notes_title_tv"
         android:layout_width="0dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:text="title"
+        android:textSize="20dp"
+        android:textColor="@android:color/black"
         app:layout_constraintLeft_toRightOf="@id/notes_list_image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,10 +30,10 @@
     <TextView
         android:id="@+id/notes_desc_tv"
         android:layout_width="0dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:text=""
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintLeft_toRightOf="@id/notes_list_image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/notes_title_tv" />
