--- a/app/src/main/res/layout/activity_category_list.xml
+++ b/app/src/main/res/layout/activity_category_list.xml
@@ -33,8 +33,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-
     <View
         android:id="@+id/darkView_view"
         android:layout_width="match_parent"
@@ -46,21 +44,22 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/categories_tv" />
+
     <SearchView
+        android:id="@+id/search_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/darkView_view"
         app:layout_constraintRight_toRightOf="parent"
          />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/categories_tv" />
+        app:layout_constraintTop_toBottomOf="@id/search_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
