Added Search Capability in Categories

--- a/app/src/main/res/layout/activity_note_detail.xml
+++ b/app/src/main/res/layout/activity_note_detail.xml
@@ -34,9 +34,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:text="Save"
-        android:onClick="saveClicked"
         android:gravity="right|center_vertical"
+        android:onClick="saveClicked"
+        android:text="Save"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="@id/note_top_textview"
         app:layout_constraintRight_toRightOf="parent"
@@ -60,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:background="@android:color/transparent"
         android:gravity="top"
         android:hint="Description"
@@ -74,11 +74,20 @@
         android:id="@+id/imageview"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:visibility="gone"
         android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@id/foler_btn"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/created_on_textview"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/created_on_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="Created On"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@id/foler_btn" />
 
     <Button
         android:id="@+id/foler_btn"
@@ -97,7 +106,7 @@
         android:backgroundTint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/foler_btn"
-        app:layout_constraintRight_toLeftOf="@id/camera_btn"/>
+        app:layout_constraintRight_toLeftOf="@id/camera_btn" />
 
     <Button
         android:id="@+id/camera_btn"
@@ -108,7 +117,7 @@
         android:onClick="cameraClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/delete_btn"
-        app:layout_constraintRight_toLeftOf="@id/audio_btn"/>
+        app:layout_constraintRight_toLeftOf="@id/audio_btn" />
 
     <Button
         android:id="@+id/audio_btn"
@@ -116,19 +125,19 @@
         android:layout_height="30dp"
         android:background="@drawable/ic_baseline_mic_none_24"
         android:backgroundTint="@color/colorAccent"
-        app:layout_constraintLeft_toRightOf="@id/camera_btn"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/location_btn"/>
+        app:layout_constraintLeft_toRightOf="@id/camera_btn"
+        app:layout_constraintRight_toLeftOf="@id/location_btn" />
 
     <Button
         android:id="@+id/location_btn"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginLeft="80dp"
-        android:background="@drawable/ic_baseline_mic_none_24"
+        android:background="@drawable/ic_baseline_location_on_24"
         android:backgroundTint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
