--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -4,48 +4,92 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
     tools:context=".activities.NotesListActivity">
+
     <Button
         android:id="@+id/backBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/ic_baseline_keyboard_arrow_left_24"
+        android:onClick="backClicked"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="backClicked"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/category_name_textview"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/backBtn"
-        app:layout_constraintBottom_toBottomOf="@id/backBtn"
         android:gravity="center_vertical"
         android:text="Note Category"
         android:textColor="@android:color/black"
-        android:textSize="24dp"/>
+        android:textSize="24dp"
+        app:layout_constraintBottom_toBottomOf="@id/backBtn"
+        app:layout_constraintLeft_toRightOf="@id/backBtn"
+        app:layout_constraintRight_toLeftOf="@id/edit_btn"
+        app:layout_constraintTop_toTopOf="@id/backBtn" />
+
+    <Button
+        android:id="@+id/edit_btn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@android:color/transparent"
+        android:text="Edit"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="@id/backBtn"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/backBtn" />
 
     <SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/backBtn"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/backBtn" />
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchView"/>
+        app:layout_constraintTop_toBottomOf="@id/searchView" />
+
+    <Button
+        android:id="@+id/move_to_btn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/ic_baseline_move_to_inbox_24"
+        android:backgroundTint="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="10dp"/>
+    
+    <Button
+        android:id="@+id/new_note_btn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:onClick="newNoteClicked"
+        android:background="@drawable/ic_baseline_create_24"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="10dp"/>
+
+    <TextView
+        android:id="@+id/num_notes_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/move_to_btn"
+        app:layout_constraintBottom_toBottomOf="@id/move_to_btn"
+        app:layout_constraintLeft_toRightOf="@id/move_to_btn"
+        app:layout_constraintRight_toLeftOf="@id/new_note_btn"
+        android:text="Number of Notes"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
