--- a/app/src/main/res/layout/activity_move_to.xml
+++ b/app/src/main/res/layout/activity_move_to.xml
@@ -4,57 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MoveToActivity"
-    android:padding="20dp">
+    android:padding="5dp"
+    tools:context=".activities.MoveToActivity">
+
 
     <Button
-        android:id="@+id/backBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:background="@android:drawable/ic_menu_revert"
-        android:text="Back"
-        android:backgroundTint="@color/colorAccent"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <Button
-        android:id="@+id/doneBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="20dp"
-        android:background="@android:drawable/ic_menu_revert"
-        android:text="Done"
-        android:backgroundTint="@color/colorAccent"
-        app:layout_constraintLeft_toRightOf="@id/backBtn"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        />
-    <Button
-        android:id="@+id/cancelBtn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="20dp"
-        android:background="@android:drawable/ic_menu_revert"
+        android:id="@+id/cancel_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:textColor="@color/colorAccent"
         android:text="Cancel"
-        android:backgroundTint="@color/colorAccent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/move_to_btn"
+        app:layout_constraintBottom_toBottomOf="@id/move_to_btn"/>
 
-        app:layout_constraintLeft_toRightOf="@id/doneBtn"
-        app:layout_constraintBottom_toTopOf="parent"
+    <TextView
+        android:id="@+id/move_to_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="Move To"
+        android:textColor="@android:color/black"
+        android:textSize="32dp"/>
 
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
+    <ListView
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/move_to_btn"
+        android:layout_marginTop="10dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
