--- a/app/src/main/res/layout/notes_list_item.xml
+++ b/app/src/main/res/layout/notes_list_item.xml
@@ -21,8 +21,10 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:text="title"
-        android:textSize="20dp"
         android:textColor="@android:color/black"
+        android:textSize="20dp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@id/notes_desc_tv"
         app:layout_constraintLeft_toRightOf="@id/notes_list_image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,9 +36,10 @@
         android:layout_marginLeft="10dp"
         android:text=""
         android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/notes_title_tv"
         app:layout_constraintLeft_toRightOf="@id/notes_list_image"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/notes_title_tv" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
